# jarvis

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  JARVIS_INDEX.md  README.ar.md  README.md  STRUCTURE.md  Structure  TASKS.md  TASKS2.md  deploy.sh  docker-compose.yml  ecosystem.config.cjs  jarvis_client.py  jarvis_workflow.json  launch_jarvis.bat  memory.db  more_paths.json  package-lock.json  package.json  paths.json  pyproject.toml  requirements.txt  tsconfig.json
app/: __init__.py  __main__.py  cli.py  main.py  server.py
config/: jarvis_identity.yaml  models.yaml  settings.example.yaml  settings.yaml  skills.yaml
core/: __init__.py  bootstrap.py
data/: jarvis.db
docs/: audit-report.md  design.md
interfaces/: __init__.py
models/: __init__.py
python-app/: __main__.py  bridge_server.py  cli.py  main.py  pyproject.toml  requirements.txt
python-app/agents/: __init__.py  base_agent.py  base_planning_agent.py  browser_agent.py  coding_agent.py  execution_agent.py  google_agent.py  memory_agent.py  message_bus.py  planner_agent.py  scheduler_agent.py  security_agent.py  vision_agent.py
python-app/automation/: __init__.py  apps.py  browser.py  files.py  screen.py  shell.py  system_info.py
python-app/config/: __init__.py
python-app/core/: __init__.py  agent_runtime.py  jarvis_core.py  tool_registry.py
python-app/docs/: INTERNAL_API.md
python-app/jarvis/: backup_manager.py  browser_pool.py  cancellation_token.py  cross_platform_paths.py  local_llm.py  logger.py  plugin_manager.py  self_updater.py  sleep_manager.py
python-app/locales/: ar.json  en.json
python-app/memory/: __init__.py  memory_system.py
python-app/security/: __init__.py  audit.py  permissions.py  validator.py
python-app/tests/: __init__.py  conftest.py  test_automation.py  test_jarvis_core.py  test_memory.py  test_memory_agent.py  test_security.py  test_tool_registry.py
python-app/ui/: __init__.py
python-app/wake_word/: __init__.py
run/: README.txt  dev.bat  pm2.bat  stop-pm2.bat  web.bat
scripts/: install.ps1  install.sh
settings/: __init__.py  app_settings.py  chat_types.py  loader.py  logging.py  paths.py
skills/: __init__.py
tests/: conftest.py  test_integration_phase2_3.py  test_phase2_decision_contract.py  test_phase2_escalation.py  test_phase2_evaluate.py  test_phase2_orchestrator.py  test_phase2_prompts.py  test_phase2_router.py  test_phase3_context_buffer.py  test_phase3_identity.py  test_phase3_memory.py
user/: README.txt
workflow/: jarvis-4-0-main.json  jarvis-4-5-main.json  jarvis-calendar-agent.json  jarvis-contacts-agent.json  jarvis-docs-agent.json  jarvis-drive-agent.json  jarvis-general-chat.json  jarvis-gmail-agent.json  jarvis-intent-router.json  jarvis-local-bridge.json  jarvis-memory-persist.json  (+7 more)
(+70 files in other folders)
