[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0a0"
description = "Local AI assistant — Jarvis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "interfaces*", "core*", "models*", "skills*", "settings*"]

[project.scripts]
jarvis = "app.main:main"

# Pytest: keep the repo clean — no .pytest_cache/ (still ignored by git if created)
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
